fix overflow mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,12 +25,4 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
 
-* {
-  box-sizing: border-box;
-}
